src/modules/dashboard/components/ActionsPageFeed/ActionsPageEvent/ActionsPageEvent.css
.main {
  padding: 11px 16px 11px 0;
  width: 100%;
}

.wrapper {
  display: flex;
  align-items: flex-start;
}

.status {
  margin: 0 9px 0 25px;
}

.details {
  display: flex;
  margin: 0 0 0 -5px;
}

.content {
  flex: 1;
}

.text {
  font-size: var(--size-normal);
  color: var(--temp-grey-blue-7);
}

.highlight {
  font-weight: var(--weight-bold);
  color: var(--dark);
}

.roles {
  margin-right: 10px;
}

.meta {
  margin-top: -2px;
}

.tooltipIcon {
  margin-bottom: 4px;
}

.userDecoration {
  font-weight: var(--weight-bold);
  color: var(--pink);
}

.amountTag {
  display: inline-block;
}

.amountTag > span {
  margin-top: 2px;
  vertical-align: top;
}

